# vzdv

./: .gitignore  Dockerfile  README.md  compose.yml  cspell.json  ids.json  justfile  vzdv.example.toml
.github/: CODEOWNERS
.github/workflows/: pr-ci.yml
ops/: Caddyfile-live  Caddyfile-maintenance  backup.sh  crontab  vzdv-bot.service  vzdv-site.service  vzdv-tasks.service
vzdv/: Cargo.toml
vzdv-bot/: Cargo.toml
vzdv-bot/src/: commands.rs  main.rs
vzdv-bot/src/tasks/: no_shows.rs  roles.rs
vzdv-site/: Cargo.toml
vzdv-site/src/: main.rs  shared.rs  vatusa.rs
vzdv-site/src/endpoints/: admin.rs  airspace.rs  controller.rs  events.rs  facility.rs  ids.rs  mod.rs
vzdv-site/templates/: _layout.jinja  changelog.jinja
vzdv-site/templates/admin/: activity_report.jinja  no_show_list.jinja
vzdv-site/templates/events/: event.jinja  upcoming_events.jinja  upcoming_events_snippet.jinja
vzdv-site/templates/facility/: visitor_application.jinja
vzdv-site/templates/ids/: base.jinja
vzdv-tasks/: Cargo.toml
vzdv-tasks/src/: main.rs  traffic_tracking.rs
vzdv/src/: aviation.rs  config.rs  email.rs  ids.rs  kden.rs  lib.rs  sql.rs  vatusa.rs
