[package]
name = "vzdv-bot"
version = "1.4.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2024"
description = "VATSIM ZDV Discord bot"
readme = "../README.md"
homepage = "https://github.com/vzdv-artcc/vzdv"
repository = "https://github.com/vzdv-artcc/vzdv"
documentation = "https://github.com/vzdv-artcc/vzdv"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
vzdv = { path = "../vzdv" }

anyhow = "1.0.95"
base64 = "0.22.1"
chrono-tz = "0.10.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.22"
select = "0.6.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
vatsim_utils = "0.5.4"
scraper = "0.23.1"
regex = "1.11.1"
itertools = "0.14.0"
serde_json = "1.0.140"
serde = { version = "1.0.228", features = ["derive"] }
