[package]
name = "vzdv-site"
version = "1.4.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2024"
description = "VATSIM ZDV website"
readme = "../README.md"
homepage = "https://github.com/Celeo/vzdv"
repository = "https://github.com/Celeo/vzdv"
documentation = "https://github.com/Celeo/vzdv"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
vzdv = { path = "../vzdv" }

indexmap = "2.7.0"
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["query"] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
clap = { version = "4.5.26", features = ["derive"] }
itertools = "0.14.0"
geo = "0.29.3"
lettre = "0.11.11"
log = "0.4.22"
mini-moka = { version = "0.10.3", features = ["sync"] }
minijinja = { version = "2.6.0", features = ["loader"] }
minijinja-autoreload = "2.6.0"
minijinja-embed = "2.6.0"
num-format = "0.4.4"
regex = "1.11.1"
reqwest = { version = "0.12.20", default-features = false, features = [] }
rev_buf_reader = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
thousands = "0.2.0"
thiserror = "2.0.10"
time = { version = "0.3.47", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "timeout"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
vatsim_utils = "0.5.4"

[build-dependencies]
minijinja-embed = "2.6.0"

[features]
bundled = []
