[package]
name = "vzdv-tasks"
version = "1.4.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2024"
description = "VATSIM ZDV task runner"
readme = "../README.md"
homepage = "https://github.com/vzdv-artcc/vzdv"
repository = "https://github.com/vzdv-artcc/vzdv"
documentation = "https://github.com/vzdv-artcc/vzdv"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
vzdv = { path = "../vzdv" }

anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
itertools = "0.14.0"
log = "0.4.22"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
vatsim_utils = "0.5.4"
serde_json = "1.0.140"
clokwerk = "0.4.0"
